--- a/package.json
+++ b/package.json
@@ -9,16 +9,21 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@prisma/client": "^5.19.0",
+        "bcrypt": "^5.1.1",
         "next": "14.2.5",
+        "nodemailer": "^6.9.14",
         "react": "^18",
         "react-dom": "^18",
         "zod": "^3.23.8"
     },
     "devDependencies": {
+        "@types/bcrypt": "^5.0.2",
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
         "postcss": "^8",
+        "prisma": "^5.19.0",
         "tailwindcss": "^3.4.1",
         "typescript": "^5"
     }
