--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     },
     "dependencies": {
         "@prisma/client": "^5.19.0",
+        "axios": "^1.7.7",
         "bcrypt": "^5.1.1",
         "next": "14.2.5",
         "nodemailer": "^6.9.14",
         "react": "^18",
         "react-dom": "^18",
+        "react-toastify": "^10.0.5",
         "zod": "^3.23.8"
     },
     "devDependencies": {
