--- a/.env
+++ b/.env
@@ -2,6 +2,5 @@
 DATABASE_URL="postgresql://amu-connect_owner:Y9g6Dxrajdfl@ep-muddy-shape-a53l64gd.us-east-2.aws.neon.tech/amu-connect?sslmode=require"
 BASE_URL = 'http://localhost:3000'
 # .env.local
-SMTP_USER= devss.projects@gmail.com
-SMTP_PASS= ivse lvyd bchd zewb
-
+SMTP_USER = devss.projects@gmail.com
+SMTP_PASS = gwzy krwl tnom cuby
