--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ BASE_URL = 'http://localhost:3000'
 # .env.local
 SMTP_USER = devss.projects@gmail.com
 SMTP_PASS = gwzy krwl tnom cuby
+NEXT_PUBLIC_JWT_SECRET = JWT_SECRET
