--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
         "@prisma/client": "^5.19.0",
         "axios": "^1.7.7",
         "bcrypt": "^5.1.1",
-        "next": "14.2.5",
+        "jsonwebtoken": "^9.0.2",
+        "next": "^14.2.13",
         "nodemailer": "^6.9.14",
+        "pg": "^8.13.0",
         "react": "^18",
         "react-dom": "^18",
         "react-toastify": "^10.0.5",
@@ -21,7 +23,9 @@
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.2",
+        "@types/jsonwebtoken": "^9.0.7",
         "@types/node": "^20",
+        "@types/pg": "^8.11.10",
         "@types/react": "^18",
         "@types/react-dom": "^18",
         "postcss": "^8",
