--- a/.env
+++ b/.env
@@ -1,7 +1,12 @@
 
 DATABASE_URL="postgresql://amu-connect_owner:Y9g6Dxrajdfl@ep-muddy-shape-a53l64gd.us-east-2.aws.neon.tech/amu-connect?sslmode=require"
-BASE_URL = 'http://localhost:3000'
+NEXT_PUBLIC_BASE_URL = 'http://localhost:3000'
 # .env.local
 SMTP_USER = devss.projects@gmail.com
 SMTP_PASS = gwzy krwl tnom cuby
 NEXT_PUBLIC_JWT_SECRET = JWT_SECRET
+# .env.local
+REDIS_URL = https://romantic-kodiak-24878.upstash.io;
+REDIS_TOKEN  = AWEuAAIjcDFmNWI2ZTQ3OWRhZjQ0YzI1OTdlZTcwM2I2Y2Q3ZDNhYXAxMA
+
+
