--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     },
     "dependencies": {
         "@prisma/client": "^5.19.0",
+        "@upstash/redis": "^1.34.3",
         "axios": "^1.7.7",
         "bcrypt": "^5.1.1",
-        "next": "14.2.5",
+        "jsonwebtoken": "^9.0.2",
+        "next": "^14.2.15",
         "nodemailer": "^6.9.14",
         "react": "^18",
         "react-dom": "^18",
         "react-toastify": "^10.0.5",
+        "recoil": "^0.7.7",
+        "redis": "^4.7.0",
         "zod": "^3.23.8"
     },
     "devDependencies": {
