--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
         "react-toastify": "^10.0.5",
         "recoil": "^0.7.7",
         "redis": "^4.7.0",
+        "socket.io": "^4.8.1",
+        "socket.io-client": "^4.8.1",
         "zod": "^3.23.8"
     },
     "devDependencies": {
