--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "@prisma/client": "^5.19.0",
         "@upstash/redis": "^1.34.3",
+        "aceternity-ui": "^0.2.2",
         "axios": "^1.7.7",
         "bcrypt": "^5.1.1",
         "jsonwebtoken": "^9.0.2",
