--- a/.env
+++ b/.env
@@ -1,10 +1,6 @@
 
 DATABASE_URL="postgresql://amu-connect_owner:Y9g6Dxrajdfl@ep-muddy-shape-a53l64gd.us-east-2.aws.neon.tech/amu-connect?sslmode=require"
-<<<<<<< HEAD
-NEXT_PUBLIC_BASE_URL = "http://localhost:${PORT}"
-=======
-NEXT_PUBLIC_BASE_URL = 'http://localhost:3002'
->>>>>>> e834d57a0be5ac862a20f2df24949813495a52b0
+NEXT_PUBLIC_BASE_URL = "http://localhost:3000"
 # .env.local
 SMTP_USER = devss.projects@gmail.com
 SMTP_PASS = gwzy krwl tnom cuby
