--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "redis": "^4.7.0",
         "socket.io": "^4.8.1",
         "socket.io-client": "^4.8.1",
+        "util": "^0.12.5",
         "zod": "^3.23.8"
     },
     "devDependencies": {
